--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dateparser>=1.2.2",
     "extract-msg>=0.55.0",
     "fastapi>=0.128.0",
+    "groqy>=0.1.0",
     "langchain>=1.2.0",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "phonenumbers>=9.0.21",
     "pydantic>=2.12.5",
     "python-magic>=0.4.27",
     "python-multipart>=0.0.21",
